Fix: recreate all files, rename next.js to next-sentence.js, remove old public/

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# Node
 node_modules/
-
-# Environment
 .env.local
-
-# Database
+.env
+.vercel/
 data.sqlite
-
-# Uploads and recordings
 uploads/
 recordings/
-
-# Logs
-npm-debug.log*
+*.log
