--- a/package.json
+++ b/package.json
@@ -1,25 +1,8 @@
 {
   "name": "khasi-speech-collector",
-  "version": "0.1.0",
-  "description": "Simple speech data collection platform for Khasi language.",
-  "main": "backend/server.js",
-  "scripts": {
-    "start": "echo \"This project is static when deployed to Vercel. To run the local server use 'npm run dev' or 'npm run local'.\"",
-    "dev": "nodemon backend/server.js",
-    "local": "node backend/server.js"
-  },
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6",
-    "sqlite": "^4.0.25",
-    "xlsx": "^0.18.5",
     "@supabase/supabase-js": "^2.27.0"
-  },
-  "optionalDependencies": {},
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
