Full redesign: admin login/upload/data-viewer, client registration/table-recording/batch-submit, mobile-first UI

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/record",
             "destination": "/index.html"
+        },
+        {
+            "source": "/admin",
+            "destination": "/admin.html"
         }
     ]
 }
